--- a/capp/static/layout.css
+++ b/capp/static/layout.css
@@ -4,7 +4,6 @@ Navbar (background): #8bbbd9
 Navbar (a hover): #466fa6
 Navbar (logo): #568c63
 Navbar (a menu): #2a4359
-Footer (background): #8bbbd9
 */
 
 /* Google fonts Roboto  */
@@ -29,22 +28,26 @@ ul {
   list-style: none;
   font-size: 400;
 }
+a {
+  color: #333;
+  text-decoration: none;
+}
 h1, h2 {
   font-weight: 400;
   line-height: 1.2;
 }
 p {
   margin: 10px 0;
-  font-size: 18px;
+  font-size: 14px;
 }
 img {
   width: 100%;
 }
 /* Navbar  */
-.section_navbar {
+.section_carbon_app_navbar {
   background-color:#8bbbd9;
 }
-.navbar {
+.carbon_app_navbar {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -53,27 +56,26 @@ img {
   background-color: #8bbbd9;
   padding: 0 0px;
 }
-.navbar a {
-  color: black;
+.carbon_app_navbar a {
+  color: #2a4359;
   padding: 10px 20px;
   margin: 0 5px;
   font-size: 20px;
   text-decoration: none;
 }
-.navbar a:hover{
+.carbon_app_navbar a:hover{
   border-bottom: #2a4359 4px solid;
 }
-.navbar ul {
+.carbon_app_navbar ul {
   display: flex;
   flex-direction: row;
 }
-.navbar .logo {
+.carbon_app_navbar .logo {
   font-weight: 400;
 }
 .text-logo {
   color: #568c63;
 }
-
 /* Footer  */
 .section_footer{
   background-color:#8bbbd9;
@@ -87,21 +89,23 @@ img {
   background-color: #8bbbd9;
   padding: 0 0px;
 }
+
+
 /* Media query */
 @media(max-width:768px){
-  .navbar {
-    height: 160px;
+  .carbon_app_navbar {
+    height: 180px;
     flex-direction: column;
   }
-  .navbar a {
+  .carbon_app_navbar a {
     font-size: 15px;
     padding: 5px 20px;
   }
-  .navbar ul {
+  .carbon_app_navbar ul {
     display: flex;
     flex-direction: column;
   }
-  .navbar a:hover{
+  .carbon_app_navbar a:hover{
     color: #568c63;
     border-bottom: #2a4359 2px solid;
   }
